--- a/AnchoredinHim/Views/Home/Index.cshtml
+++ b/AnchoredinHim/Views/Home/Index.cshtml
@@ -1,31 +1,173 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
+<html>
+<head>
+    <title></title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <!--[if lte ie 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+    <link href="~/css/main.css" rel="stylesheet" />
+    <!--[if lte ie 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+    <!--[if lte ie 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+</head>
+<body>
+    <!-- Wrapper -->
+    <div id="wrapper">
+        <!-- Banner -->
+        <section id="banner" class="major">
+            <div class="inner">
+                <header class="major">
+                    <h1>Anchored in Him Ministries</h1>
+                </header>
+                <div class="content">
+                    <p>
+                        A new ministry located in Baltimore, Maryland. Founded in 2018.<br />
+                    </p>
+                </div>
+            </div>
+        </section>
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+        <!-- Main -->
+        <div id="main">
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+            <!-- One -->
+            <section id="one" class="tiles">
+                <article>
+                    <span class="image">
+                        <img src="~/images/smokelight.jpeg" alt="" />
+                    </span>
+                    <header class="major">
+                        <h3><a href="landing.html" class="link">Daily Devotional</a></h3>
+                    </header>
+                </article>
+                <article>
+                    <span class="image">
+                        <img src="~/images/Blog.jpeg" alt="" />
+                    </span>
+                    <header class="major">
+                        <h3><a href="landing.html" class="link">Blog</a></h3>
+                    </header>
+                </article>
+                <article>
+                    <span class="image">
+                        <img src="~/images/Calendar.jpeg" alt="" />
+                    </span>
+                    <header class="major">
+                        <h3><a href="landing.html" class="link">Event Calendar</a></h3>
+                        <p>Lorem etiam nullam</p>
+                    </header>
+                </article>
+                <article>
+                    <span class="image">
+                        <img src="~/images/ATeamBmore.jpeg" alt="" />
+                    </span>
+                    <header class="major">
+                        <h3><a href="landing.html" class="link">ATeam Baltimore</a></h3>
+                    </header>
+                </article>
+                <article>
+                    <span class="image">
+                        <img src="~/images/Volunteer.jpeg" alt="" />
+                    </span>
+                    <header class="major">
+                        <h3><a href="landing.html" class="link">Volunteer</a></h3>
+                        <p>Coming Soon</p>
+                    </header>
+                </article>
+                <article>
+                    <span class="image">
+                        <img src="~/images/Donate.jpg" alt="" />
+                    </span>
+                    <header class="major">
+                        <h3><a href="landing.html" class="link">Donate</a></h3>
+                        <p>Coming Soon</p>
+                    </header>
+                </article>
+            </section>
+
+            <!-- Two -->
+            <section id="two">
+                <div class="inner">
+                    <header class="major">
+                        <h2>About Us</h2>
+                    </header>
+                    <p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
+                    <ul class="actions">
+                        <li><a href="landing.html" class="button next">Get Started</a></li>
+                    </ul>
+                </div>
+            </section>
+
+        </div>
+
+        <!-- Contact -->
+        @*<section id="contact">
+            <div class="inner">
+                <section>
+                    <form method="post" action="#">
+                        <div class="field half first">
+                            <label for="name">Name</label>
+                            <input type="text" name="name" id="name" />
+                        </div>
+                        <div class="field half">
+                            <label for="email">Email</label>
+                            <input type="text" name="email" id="email" />
+                        </div>
+                        <div class="field">
+                            <label for="message">Message</label>
+                            <textarea name="message" id="message" rows="6"></textarea>
+                        </div>
+                        <ul class="actions">
+                            <li><input type="submit" value="Send Message" class="special" /></li>
+                            <li><input type="reset" value="Clear" /></li>
+                        </ul>
+                    </form>
+                </section>*@
+        <section class="split">
+            <section>
+                <div class="contact-method">
+                    <span class="icon alt fa-envelope"></span>
+                    <h3>Email</h3>
+                    <a href="#">AnchoredinHimMinistries@gmail.com</a>
+                </div>
+            </section>
+            <section>
+                <div class="contact-method">
+                    <span class="icon alt fa-phone"></span>
+                    <h3>Phone</h3>
+                    <span>443-515-7184</span>
+                </div>
+            </section>
+            <section>
+                <div class="contact-method">
+                    <span class="icon alt fa-home"></span>
+                    <h3>Address</h3>
+                    <span>
+                        1234 Somewhere Road #5432<br />
+                        Nashville, TN 00000<br />
+                        United States of America
+                    </span>
+                </div>
+            </section>
+        </section>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+
+    <!-- Footer -->
+    <footer id="footer">
+        <div class="inner">
+            @*<ul class="icons">
+                    <li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+                    <li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
+                    <li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+                    <li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+                    <li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+                </ul>*@
+            <ul class="copyright">
+                <li>&copy; Untitled</li>
+                <li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+            </ul>
+        </div>
+    </footer>
+</body>
+</html>
