Added css, js, home page

--- a/AnchoredinHim/Views/Home/Index.cshtml
+++ b/AnchoredinHim/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <!--[if lte ie 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-    <link href="~/css/main.css" rel="stylesheet" />
+    <link href="~/Content/css/main.css" rel="stylesheet" />
     <!--[if lte ie 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
     <!--[if lte ie 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 </head>
@@ -35,7 +35,7 @@
             <section id="one" class="tiles">
                 <article>
                     <span class="image">
-                        <img src="~/images/smokelight.jpeg" alt="" />
+                        <img src="~/Content/images/smokelight.jpeg" />
                     </span>
                     <header class="major">
                         <h3><a href="landing.html" class="link">Daily Devotional</a></h3>
@@ -43,7 +43,7 @@
                 </article>
                 <article>
                     <span class="image">
-                        <img src="~/images/Blog.jpeg" alt="" />
+                        <img src="~/Content/images/Blog.jpeg" />
                     </span>
                     <header class="major">
                         <h3><a href="landing.html" class="link">Blog</a></h3>
@@ -51,7 +51,7 @@
                 </article>
                 <article>
                     <span class="image">
-                        <img src="~/images/Calendar.jpeg" alt="" />
+                        <img src="~/Content/images/Calendar.jpeg" />
                     </span>
                     <header class="major">
                         <h3><a href="landing.html" class="link">Event Calendar</a></h3>
@@ -60,7 +60,7 @@
                 </article>
                 <article>
                     <span class="image">
-                        <img src="~/images/ATeamBmore.jpeg" alt="" />
+                        <img src="~/Content/images/ATeamBmore.jpeg" />
                     </span>
                     <header class="major">
                         <h3><a href="landing.html" class="link">ATeam Baltimore</a></h3>
@@ -68,7 +68,7 @@
                 </article>
                 <article>
                     <span class="image">
-                        <img src="~/images/Volunteer.jpeg" alt="" />
+                        <img src="~/Content/images/Volunteer.jpeg" />
                     </span>
                     <header class="major">
                         <h3><a href="landing.html" class="link">Volunteer</a></h3>
@@ -77,7 +77,7 @@
                 </article>
                 <article>
                     <span class="image">
-                        <img src="~/images/Donate.jpg" alt="" />
+                        <img src="~/Content/images/Donate.jpg" />
                     </span>
                     <header class="major">
                         <h3><a href="landing.html" class="link">Donate</a></h3>
@@ -93,9 +93,6 @@
                         <h2>About Us</h2>
                     </header>
                     <p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
-                    <ul class="actions">
-                        <li><a href="landing.html" class="button next">Get Started</a></li>
-                    </ul>
                 </div>
             </section>
 
