Added controllers & views

--- a/AnchoredinHim/Views/Home/Index.cshtml
+++ b/AnchoredinHim/Views/Home/Index.cshtml
@@ -38,7 +38,9 @@
                         <img src="~/Content/images/smokelight.jpeg" />
                     </span>
                     <header class="major">
-                        <h3><a href="landing.html" class="link">Daily Devotional</a></h3>
+                        <h3>
+                            <a href="~/DailyDevotionals/Index">Daily Devotional</a>
+                        </h3>
                     </header>
                 </article>
                 <article>
@@ -46,7 +48,9 @@
                         <img src="~/Content/images/Blog.jpeg" />
                     </span>
                     <header class="major">
-                        <h3><a href="landing.html" class="link">Blog</a></h3>
+                        <h3>
+                            <a href="~/Blogs/Index">Blog</a>
+                        </h3>
                     </header>
                 </article>
                 <article>
@@ -54,7 +58,9 @@
                         <img src="~/Content/images/Calendar.jpeg" />
                     </span>
                     <header class="major">
-                        <h3><a href="landing.html" class="link">Event Calendar</a></h3>
+                        <h3>
+                            <a href="~/Events/Index">Calendar</a>
+                        </h3>
                         <p>Lorem etiam nullam</p>
                     </header>
                 </article>
@@ -80,8 +86,9 @@
                         <img src="~/Content/images/Donate.jpg" />
                     </span>
                     <header class="major">
-                        <h3><a href="landing.html" class="link">Donate</a></h3>
-                        <p>Coming Soon</p>
+                        <h3>
+                            <a href="~/Archives/Index">Archives</a>
+                        </h3>
                     </header>
                 </article>
             </section>
@@ -93,7 +100,6 @@
                         <h2>About Us</h2>
                     </header>
                     <p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
-
                 </div>
             </section>
 
