Added ATeam Baltimore page

--- a/AnchoredinHim/Views/Home/Index.cshtml
+++ b/AnchoredinHim/Views/Home/Index.cshtml
@@ -61,7 +61,6 @@
                         <h3>
                             <a href="~/Events/Index">Calendar</a>
                         </h3>
-                        <p>Lorem etiam nullam</p>
                     </header>
                 </article>
                 <article>
@@ -69,7 +68,7 @@
                         <img src="~/Content/images/ATeamBmore.jpeg" />
                     </span>
                     <header class="major">
-                        <h3><a href="landing.html" class="link">ATeam Baltimore</a></h3>
+                        <h3><a href="~/ATeam Baltimore/Index.cshtml">ATeam Baltimore</a></h3>
                     </header>
                 </article>
                 <article>
@@ -106,7 +105,7 @@
         </div>
 
         <!-- Contact -->
-        @*<section id="contact">
+        <section id="contact">
             <div class="inner">
                 <section>
                     <form method="post" action="#">
@@ -127,7 +126,9 @@
                             <li><input type="reset" value="Clear" /></li>
                         </ul>
                     </form>
-                </section>*@
+                </section>
+             </div>
+          </section>
         <section class="split">
             <section>
                 <div class="contact-method">
