Added ALL pages

--- a/AnchoredinHim/Views/Events/Details.cshtml
+++ b/AnchoredinHim/Views/Events/Details.cshtml
@@ -42,6 +42,14 @@
             @Html.DisplayFor(model => model.Archive.ArchivesID)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Volunteer.Name)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Volunteer.Name)
+        </dd>
+
     </dl>
 </div>
 <p>
