--- a/AnchoredinHim/Views/ATeamBmores/Create.cshtml
+++ b/AnchoredinHim/Views/ATeamBmores/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model AnchoredinHim.Models.Archive
+﻿@model AnchoredinHim.Models.ATeamBmore
 
 @{
     ViewBag.Title = "Create";
@@ -11,22 +11,22 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Archive</h4>
+        <h4>ATeamBmore</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.ArchivesID, "ArchivesID", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.PostID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("ArchivesID", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.ArchivesID, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.PostID, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.PostID, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Date, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Post, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Date, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Date, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Post, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Post, "", new { @class = "text-danger" })
             </div>
         </div>
 
