--- a/AnchoredinHim/Views/ATeamBmores/Edit.cshtml
+++ b/AnchoredinHim/Views/ATeamBmores/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model AnchoredinHim.Models.Archive
+﻿@model AnchoredinHim.Models.ATeamBmore
 
 @{
     ViewBag.Title = "Edit";
@@ -11,16 +11,16 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Archive</h4>
+        <h4>ATeamBmore</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.ArchivesID)
+        @Html.HiddenFor(model => model.PostID)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Date, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Post, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Date, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Date, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Post, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Post, "", new { @class = "text-danger" })
             </div>
         </div>
 
